# rustcloud

./: .env  .gitignore  Cargo.toml  README.md  compose.yaml  defaultConfig.toml
.VSCodeCounter/2024-07-18_23-36-44/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
main_app/: .gitignore  Cargo.toml
main_app/src/: db.rs  file.rs  libs.rs  main.rs
main_app/src/auth/: guard.rs  lib.rs  routes.rs
main_app/src/db/: connect.rs
main_app/src/file/: lib.rs  routes.rs  storage_backend.rs
main_app/src/file/share/: routes.rs
main_app/src/file/storage_backend/: flat.rs  lib.rs  ref_storage.rs
main_app/src/file_metadata/: routes.rs
shared_lib/: Cargo.toml
shared_lib/src/db/: connect.rs  models.rs
src/: auth.rs  file.rs  main.rs  public.rs
src/auth/: guard.rs  lib.rs  routes.rs
src/db/: connect.rs  models.rs
src/file/: lib.rs  routes.rs
src/file/share/: routes.rs
src/file/storage_backend/: flat.rs
src/file_metadata/: routes.rs
src/metadata/: routes.rs
thumbnail/: Cargo.toml
