[package]
name = "rustcloud"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
jsonwebtoken = "9.3.0"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.38"
dotenv = "0.15.0"
mongodb = "2.8.2"
redis = { version = "0.25.4", features = ["tokio-comp","aio","connection-manager"] }
password-hash = "0.5.0"
argon2 = "0.5.3"
uuid = "1.8.0"
serde_json = "1.0.117"
async-hash = "0.5.3"
crypto = "0.5.1"
sha2 = "0.10.8"
async-trait = "0.1.81"
