[package]
name = "main_app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.213", features = ["derive"] }
chrono = "0.4.38"
dotenv = "0.15.0"
mongodb = {version = "3.1.0" }
redis = { version = "0.27.5", features = ["tokio-comp","aio","connection-manager"] }
password-hash = "0.5.0"
argon2 = "0.5.3"
uuid = "1.11.0"
serde_json = "1.0.132"
async-hash = "0.5.4"
crypto = "0.5.1"
sha2 = "0.10.8"
async-trait = "0.1.83"
bson = {version = "2.13.0", features = ["chrono-0_4", "serde_with-3"] }
shared_lib = { path = "../shared_lib" }
infer = "0.16.0"